chore(samples): publish js,ts,python,java v0.0.1

--- a/js/package.json
+++ b/js/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xfloor/floor-memory-sdk-js": "^1.0.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@xfloor/floor-memory-sdk-js": "latest"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
